Fix scrolling bug on small screens

--- a/index.css
+++ b/index.css
@@ -4,8 +4,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html,
-body{
+html{
     margin: 0;
     padding: 0;
     width: 100%;
